compiler/tests/ar/errors/pure_ref_param.salam
// لغة: العربية
// توقع: E012
نقي دالة زد(قیمة &: صحیح): صحیح:
    أرجع قیمة + 1
نهاية

دالة الرئیسیة:
    اطبع 1
نهاية
